# AI-Dock

./: .gitignore  CONTEXT.md  DESIGN.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
docs/adr/: 0001-codex-signal-from-logs-db.md  0002-openrouter-bar-parallel-to-codex-bars.md  0003-openrouter-bar-differentiated-from-codex-bars.md  0004-claude-code-usage-from-oauth-usage-api.md  0005-codex-usage-from-chatgpt-wham-api.md
docs/spec/: 2026-06-22-initial.md
src/: App.css  App.test.ts  App.tsx  providers.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  codex.rs  codex_tests.rs  config.rs  config_tests.rs  deepseek.rs  deepseek_tests.rs  lib.rs  main.rs  openrouter.rs  openrouter_tests.rs  status.rs
src/components/: Bar.css  Bar.tsx  Row.css  Row.tsx  Settings.css  Settings.tsx
